# MarzWorkbench

./: .gitignore  Init.py  InitGui.py  InitSetup.py  README.md  build.sh  changelog.md  manifest.ini  package.xml  pyproject.toml  setup.py
.github/: FUNDING.yml
Resources/: intro.html  neck_profiles.json
Resources/examples/Blackmachine_B6/: cad.FCStd
Resources/examples/Headless/: cad.FCStd
Resources/examples/LesPaul/: cad.FCStd
Resources/examples/RedSpecial/: cad.FCStd
Resources/icons/: test.html  test.out.html  test.py
Resources/inkscape/marz/: marz.inx  marz.md5  marz.py  marz.yaml  marz_arguments.py  marz_body.inx  marz_build.py  marz_fb_inlays.inx  marz_fretboard_inlays.inx  marz_headstock.inx  meta.py
docs/examples/: multiscale-compound-fretboard.stl  neck-and-fretboard.stl  neck.stl
docs/examples/fcuc2023/: Complete-5-post.FCStd
freecad/marz/: __init__.py  init_gui.py
freecad/marz/command/: __init__.py  create_body.py  create_constructions.py  create_fretboard.py  create_instrument.py  create_neck.py  export.py  import_body.py  import_headstock.py  import_inlays.py  parameters.py  visibility.py  windows.py
freecad/marz/curves/: __init__.py  gordon.py
freecad/marz/extension/: __init__.py  attributes.py  events.py  fc.py  fcdoc.py  fclog.py  fcpref.py  fcui.py  lang.py  paths.py  properties.py  qt.py  svg.py  threading.py  ui.py  version.py
freecad/marz/feature/: __init__.py  body.py  document.py  draft.py  edit_form.py  edit_form_base.py  edit_form_layout.py  files.py  fretboard.py  import_svg.py  import_svg_widget.py  instrument.py  instrument_properties.py  logging.py  neck.py  preferences.py  (+4 more)
src/: Init.py  InitGui.py  README.md  marz_attrs.py  marz_body_data.py  marz_body_feature.py  marz_cache.py  marz_cmd_create_body.py  marz_cmd_create_constructions.py  marz_cmd_create_fretboard.py  marz_cmd_create_instrument.py  marz_cmd_create_neck.py  marz_cmd_create_neck_planes.py  marz_cmd_import_body.py  marz_cmd_import_headstock.py  marz_cmd_import_inlays.py  marz_cmd_toggle_auto.py  marz_cmd_windows.py  marz_freecad.py  marz_fretboard_builder.py  marz_fretboard_data.py  marz_fretboard_feature.py  marz_geom.py  marz_headstock.py  marz_import_svg.py  marz_instrument_feature.py  marz_instrument_properties.py  marz_linexy.py  marz_math.py  marz_model.py  marz_neck_data.py  marz_neck_feature.py  marz_neck_profile.py  marz_neck_profile_list.py  marz_properties.py  marz_reloader.py  marz_threading.py  marz_transitions.py  marz_ui.py  marz_utils.py  (+2 more)
(+20 files in other folders)
