<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1">
  <name>Marz Workbench</name>
  <description>Parametric Guitar design workbench</description>
  <version>0.1.16</version>
  <maintainer email="twitter: @mnesarco">Frank Martinez</maintainer>
  <license file="LICENSE-GPL">GPL-3.0-or-later</license>
  <license file="LICENSE-LGPL">LGPL-2.1-or-later</license>
  <url type="repository" branch="master">https://github.com/mnesarco/MarzWorkbench</url>
  <url type="documentation">https://github.com/mnesarco/MarzWorkbench/wiki</url>

  <content>
    <workbench>
      <name>Marz Workbench</name>
      <classname>MarzWorkbench</classname>
      <description>Parametric Guitar design workbench.</description>
      <version>0.1.16</version>
      <subdirectory>./</subdirectory>
      <icon>Resources/icons/Marz.svg</icon>
      <freecadmin>0.21.0</freecadmin>
      <depend>numpy</depend>
      <tag>guitar</tag>
    </workbench>
  </content>

</package>